tests/errors/compiler/default_not_in_switch/default_with_block_in_main.c
void main()
{
	print("before");
	default:
	{

	}
	print("after");
}
